# spinner

./: .travis.yml  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  cmdline-luck.c  cmdline-luck.h  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  luck  luck-1.0.tar.gz.sig  luck.ggo  main.c  main.cc  main.cc~  main.h  main.h~  protospinner.xcf
.deps/: luck-main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
